--- a/webapp/view/StandardSecond.view.xml
+++ b/webapp/view/StandardSecond.view.xml
@@ -1,6 +1,6 @@
  
 <mvc:View
-    controllerName="ns.rfapp.controller.Fifth"
+    controllerName="ns.rfapp.controller.StandardSecond"
     xmlns:unified="sap.ui.unified"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns:core="sap.ui.core"
@@ -20,13 +20,12 @@
     displayBlock="true"
     xmlns:tnt="sap.tnt"
 >
-    <tnt:ToolPage id="idToolPagePutawayByWO_Fifth">
+    <tnt:ToolPage id="idToolPage_StandardSecond">
        
- 
         <tnt:mainContents>
            
             <ScrollContainer
-                id="idScrollContainerIn_Fifth"
+                id="idScrollContainerIn_StandardSecond"
                 width="100%"
                 height="100%"
                 horizontal="false"
@@ -36,13 +35,13 @@
             >
               
                 <VBox
-                    id="idVBoxThirdScreen_Fifth"
+                    id="idVBoxThirdScreen_StandardSecond"
                     justifyContent="Center"
                     alignItems="Center"
                     class="sapUiMediumMarginTop"
                 >
                     <form:SimpleForm
-                        id="idSimpleForm4_Fifth"
+                        id="idSimpleForm4_StandardSecond"
                         layout="ResponsiveGridLayout"
                         labelSpanL="4"
                         labelSpanM="4"
@@ -50,115 +49,111 @@
                         columnsM="2"
                         width="100%"
                     >
-                        <VBox id="idVBox02Page3_Fifth">
-                            <HBox id="idHBox01Page3_Fifth">
+                        <VBox id="idVBox02Page3_StandardSecond">
+                            <HBox id="idHBox01Page3_StandardSecond">
                                 <Text
-                                    id="idLabelHu_Fifth"
+                                    id="idLabelDelivery_StandardSecond"
                                     text="Delivery"
-                                         width="70px"
+                                    width="100px"
                                     class="sapUiTinyMarginTop"
                                 />
                                 <Input
-                                    id="idInputHUIn_Fifth"
-                                    width="9rem"
+                                    id="idInputDelivery_StandardSecond"
+                                    width="14rem"
                                     value=""
                                     editable="false"
                                     maxLength="35"
+                                    submit="onSubmit"
+                                    
                                 />
                                
                             </HBox>
-                            <HBox id="idHBox02Page3_Fifth">
+                            <HBox id="idHBox02Page_StandardSecond">
                                 <Text
-                                    id="idLabelWTs_Fifth"
-                                    text="HU"
-                                    width="70px"
+                                    id="idLabelWTs_StandardSecond"
+                                    text="Partner"
+                                    width="100px"
                                     class="sapUiTinyMarginTop"
                                 />
                                 <Input
-                                    id="idInputWTs1_Fifth"
-                                         width="9rem"
+                                    id="idInputNohu_StandardSecond"
+                                      width="7rem"
                                     value=""
                                     editable="false"
-                                    maxLength="225"
+                                       maxLength="10"
                                 />
                                
                             </HBox>
-                            <HBox id="idHBox03Page3_Fifth">
+                            <HBox id="idHBox03Page_StandardSecond">
                                 <Text
-                                    id="idLabelUnload_Fifth12"
-                                    text="Orig PMat"
-                                    width="70px"
+                                    id="idLabelName_StandardSecond"
+                                    text="Name"
+                                      width="100px"
                                     class="sapUiTinyMarginTop"
                                 />
                                 <Input
-                                    id="idInputUnloadIn_Fifth"
-                                     width="8rem"
+                                    id="idInputUnloadIn_WTQBYHU"
+                                     width="15rem"
                                     value=""
                                     editable="false"
-                                />
-                                  <Label id="idEmptyLabelFifth" width="3px" />
-                                   <Text
-                                    id="idLabelUnload_Fifth"
-                                    text="HTyp"
-                                    width="40px"
-                                    class="sapUiTinyMarginTop"
-                                />
-                                 <Input
-                                    id="idInputQuantityUnitsIn_Fifth1"
-                                      width="2rem"
-                                    value=""
-                                    editable="false"
-                                     maxLength="3"
+                                    maxLength="40"
                                 />
                                 
+                            </HBox>
+                            <HBox id="idHBox07Page3_StandardSecond">
+                                <Text
+                                    id="idLabelGRIn_StandardSecond"
+                                    text="Whse Door"
+                                      width="100px"
+                                    class="sapUiTinyMarginTop"
+                                />
+                                <Input
+                                    id="idInputGRIn_StandardSecond"
+                                      width="4rem"
+                                    value=""
+                                    editable="false"
+                                    maxLength="4"
+                                />
+                               
                             </HBox>
 
-                            <HBox id="idHBox03Page3_Fifth1">
+                              <HBox id="idHBox07Page_StandardSecond">
                                 <Text
-                                    id="idLabelUnload1_Fifth1"
-                                    text="New P.Mat"
-                                    width="70px"
+                                    id="idLabelWTCreated_StandardSecond"
+                                    text="No.of HUs"
+                                   width="100px"
                                     class="sapUiTinyMarginTop"
                                 />
                                 <Input
-                                    id="idInputUnloadIn_Fifth1"
-                                     width="8rem"
+                                    id="idI1nputWTCreatedIn_StandardSecond"
+                                    width="3rem"
                                     value=""
                                     editable="false"
+                                    maxLength="3"
                                 />
-                                  <Label id="idEmptyLabelFifth1" width="3px" />
-                                   <Text
-                                    id="idLabelUnload_Fifth1"
-                                    text="HTyp"
-                                    width="40px"
-                                    class="sapUiTinyMarginTop"
-                                />
-                                 <Input
-                                    id="id1InputQuantityUnitsIn_Fifth1"
-                                      width="2rem"
-                                    value=""
-                                    editable="false"
-                                     maxLength="3"
-                                />
-                                
+                               
                             </HBox>
-                           
-                              
-                             <HBox id="idHBox07Page32_Fifth11">
-                   
-                        
-                          <Button
-                            id="idCRWTIn_Fifth"
-                            text="Next"
+                             <HBox id="idHBox07Page32_StandardSecond">
+                                <Button
+                            id="idHULISTButtonIn_StandardSecond"
+                            text="HU List"
                             class="sapUiTinyMarginEnd"
-                            press="OnPressCRWTIn_Fifth"
+                            press="onPressHuListIn_StandardSecond"
                         />
-                        <Button
-                            id="idBackButtonIn_Fifth"
+
+                          <Button
+                            id="idNewHUButtonIn_StandardSecond"
+                            text="Enter"
+                            class="sapUiTinyMarginEnd"
+                            press="onPressEnterIn_StandardSecond"
+                        />
+                             <Button
+                            id="idBackButtonIn_StandardSecond"
                             text="Back"
                             class="sapUiTinyMarginEnd"
-                            press="onPressBackBtnIn_Fifth"
+                            press="onPressBackBtnIn_StandardSecond"
                         />
+
                                
                             </HBox>
                         </VBox>
