--- a/webapp/view/Seventh.view.xml
+++ b/webapp/view/Seventh.view.xml
@@ -1,6 +1,5 @@
- 
 <mvc:View
-    controllerName="ns.rfapp.controller.Fifth"
+    controllerName="ns.rfapp.controller.Seventh"
     xmlns:unified="sap.ui.unified"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns:core="sap.ui.core"
@@ -20,13 +19,13 @@
     displayBlock="true"
     xmlns:tnt="sap.tnt"
 >
-    <tnt:ToolPage id="idToolPagePutawayByWO_Fifth">
+    <tnt:ToolPage id="idToolPagePutawayByWO_Seventh">
        
  
         <tnt:mainContents>
            
             <ScrollContainer
-                id="idScrollContainerIn_Fifth"
+                id="idScrollContainerIn_Seventh"
                 width="100%"
                 height="100%"
                 horizontal="false"
@@ -36,13 +35,13 @@
             >
               
                 <VBox
-                    id="idVBoxThirdScreen_Fifth"
+                    id="idVBoxThirdScreen_Seventh"
                     justifyContent="Center"
                     alignItems="Center"
                     class="sapUiMediumMarginTop"
                 >
                     <form:SimpleForm
-                        id="idSimpleForm4_Fifth"
+                        id="idSimpleForm4_Seventh"
                         layout="ResponsiveGridLayout"
                         labelSpanL="4"
                         labelSpanM="4"
@@ -50,16 +49,16 @@
                         columnsM="2"
                         width="100%"
                     >
-                        <VBox id="idVBox02Page3_Fifth">
-                            <HBox id="idHBox01Page3_Fifth">
+                        <VBox id="idVBox02Page3_Seventh">
+                           <HBox id="idHBox01De9liveryPage3_Seventh">
                                 <Text
-                                    id="idLabelHu_Fifth"
+                                    id="idLabel1Delivery_Seventh"
                                     text="Delivery"
-                                         width="70px"
+                                         width="60px"
                                     class="sapUiTinyMarginTop"
                                 />
                                 <Input
-                                    id="idInputHUIn_Fifth"
+                                    id="idInputDelivery1In_Seventh"
                                     width="9rem"
                                     value=""
                                     editable="false"
@@ -67,97 +66,104 @@
                                 />
                                
                             </HBox>
-                            <HBox id="idHBox02Page3_Fifth">
+                            <HBox id="idHBox01Page3_Seventh">
                                 <Text
-                                    id="idLabelWTs_Fifth"
-                                    text="HU"
-                                    width="70px"
+                                    id="idLabelHu_Seventh"
+                                    text="Hu"
+                                        width="60px"
                                     class="sapUiTinyMarginTop"
                                 />
                                 <Input
-                                    id="idInputWTs1_Fifth"
-                                         width="9rem"
+                                    id="idInputHUIn_Seventh"
+                                    width="9rem"
                                     value=""
                                     editable="false"
-                                    maxLength="225"
+                                    maxLength="35"
                                 />
                                
                             </HBox>
-                            <HBox id="idHBox03Page3_Fifth">
-                                <Text
-                                    id="idLabelUnload_Fifth12"
-                                    text="Orig PMat"
-                                    width="70px"
-                                    class="sapUiTinyMarginTop"
-                                />
-                                <Input
-                                    id="idInputUnloadIn_Fifth"
-                                     width="8rem"
-                                    value=""
-                                    editable="false"
-                                />
-                                  <Label id="idEmptyLabelFifth" width="3px" />
+                            <HBox id="idHBox02Page3_Seventh">
+                            
+                               
                                    <Text
-                                    id="idLabelUnload_Fifth"
-                                    text="HTyp"
-                                    width="40px"
+                                    id="idLabelUnload_Seventh1"
+                                    text="Unload"
+                                      width="170px"
                                     class="sapUiTinyMarginTop"
                                 />
                                  <Input
-                                    id="idInputQuantityUnitsIn_Fifth1"
-                                      width="2rem"
+                                    id="id1InputQuantityUnitsIn_Seventh1"
+                                      width="1rem"
                                     value=""
                                     editable="false"
                                      maxLength="3"
+                                />
+                                
+                               
+                            </HBox>
+                            <HBox id="idHBox03Page3_Seventh">
+                             
+                                   <Text
+                                    id="idLabelUnload_Seventh"
+                                    text="GR posted"
+                                   width="170px"
+                                    class="sapUiTinyMarginTop"
+                                />
+                                 <Input
+                                    id="idInputQuantityUnitsIn_Seventh1"
+                                      width="1rem"
+                                    value=""
+                                    editable="false"
+                                     maxLength="1"
+                                />
+                                
+                            </HBox>
+                                  <HBox id="idHBox034Page3_Seventh">
+                             
+                                   <Text
+                                    id="idLabelWT_Seventh"
+                                    text="WT Created"
+                                      width="170px"
+                                    class="sapUiTinyMarginTop"
+                                />
+                                 <Input
+                                    id="idInputWTIn_Seventh1"
+                                      width="1rem"
+                                    value=""
+                                    editable="false"
+                                     maxLength="1"
                                 />
                                 
                             </HBox>
 
-                            <HBox id="idHBox03Page3_Fifth1">
-                                <Text
-                                    id="idLabelUnload1_Fifth1"
-                                    text="New P.Mat"
-                                    width="70px"
-                                    class="sapUiTinyMarginTop"
-                                />
-                                <Input
-                                    id="idInputUnloadIn_Fifth1"
-                                     width="8rem"
-                                    value=""
-                                 
-                                />
-                                  <Label id="idEmptyLabelFifth1" width="3px" />
-                                   <Text
-                                    id="idLabelUnload_Fifth1"
-                                    text="HTyp"
-                                    width="40px"
-                                    class="sapUiTinyMarginTop"
-                                />
-                                 <Input
-                                    id="id1InputQuantityUnitsIn_Fifth1"
-                                      width="2rem"
-                                    value=""
                            
-                                     maxLength="3"
-                                />
-                                
-                            </HBox>
-                           
-                              
-                             <HBox id="idHBox07Page32_Fifth11">
+                             <HBox id="idHBox07Page32_Seventh11">
                    
                         
                           <Button
-                            id="idCRWTIn_Fifth"
-                            text="Next"
+                            id="idCRWTIn_Seventh"
+                            text="Unload"
                             class="sapUiTinyMarginEnd"
-                            press="OnPressNextIn_Fifth"
+                            press="OnPressCRWTIn_Seventh"
+                        />
+                         
+                          <Button
+                            id="idChPm_Seventh"
+                            text="GR"
+                            class="sapUiTinyMarginEnd"
+                            press="OnPressCRWTIn_Seventh"
+                        />
+                          <Button
+                            id="idChPmC_Seventh"
+                            text="CRWT"
+                            class="sapUiTinyMarginEnd"
+                            press="OnPressCRWTIn_Seventh"
                         />
                         <Button
-                            id="idBackButtonIn_Fifth"
+                            id="idBackButtonIn_Seventh"
                             text="Back"
                             class="sapUiTinyMarginEnd"
-                            press="onPressBackBtnIn_Fifth"
+                            press="onPressBackBtnIn_Seventh"
                         />
                                
                             </HBox>
